about layout test

--- a/about.html
+++ b/about.html
@@ -179,14 +179,19 @@
 								<img src="img/about/pic_about_00.jpg" class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200" alt="" />
 							</div>
 							<div class="col-lg-7 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
-								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-1">YOUNGTONE TECHNOLOGY</h2>
-								<h4 class="font-weight-bold text-transform-none positive-ls-1 mb-2">公司起源</h3>
-								<p class="line-height-7 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
-								<p class="line-height-7 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。</p>
-								<p class="line-height-7 mb-2">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化 需求與規模量大的商品。電子業是以量取勝的環境，教學/導覽擴音需求相對電子業規模很小，開發的難度高、研發與經營成本將是數倍於一般電子產品，沒有廠商有意願投入。</p>
+								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">YOUNGTONE TECHNOLOGY</h2>
+								<h4 class="font-weight-bold text-transform-none positive-ls-1 text-5-6 mb-2">公司起源</h3>
+								<p class="line-height-7 text-3-4 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
+								<p class="line-height-7 text-3-4 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。
+								</p>
+								<p class="line-height-7 text-3-4 mb-2">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化
+									需求與規模量大的商品。電子業是以量取勝的環境，教學/導覽擴音需求相對電子業規模很小，開發的難度高、研發與經營成本將是數倍於一般電子產品，沒有廠商有意願投入。</p>
 								<blockquote class="blockquote-primary">
-									<header class="text-color-primary font-weight-bold mb-2">產品是要解決問題的</header>
-									<p class="font-weight-semibold line-height-7 mb-1">我們是一群電子科技擁有二十多年工作經驗的好友，各有各的專長；有無線晶片開發、產品工業設計、聲學設計…等等，也一直思考做些新產品回饋社會。看到這個同學這個用了 3年多殘破的無線麥克風，簡單的外型、功能也不便利，我們想、以我們的經驗應可以做出更好產品，雖然麥克風產品看似簡單，但須搭配現場使用體驗與不同環境的驗證，產品設計與過程皆比過去產品開發的問題複雜許多，另外還有生產供應鏈問題，但…還是試看吧 !  成功了、就可真正改變與解決教育現場/導覽擴音的需要。</p>
+									<header class="text-color-primary font-weight-bold text-4 mb-2">產品是要解決問題的</header>
+									<p class="font-weight-semibold line-height-7 text-3-4 mb-1">
+										我們是一群電子科技擁有二十多年工作經驗的好友，各有各的專長；有無線晶片開發、產品工業設計、聲學設計…等等，也一直思考做些新產品回饋社會。看到這個同學這個用了
+										3年多殘破的無線麥克風，簡單的外型、功能也不便利，我們想、以我們的經驗應可以做出更好產品，雖然麥克風產品看似簡單，但須搭配現場使用體驗與不同環境的驗證，產品設計與過程皆比過去產品開發的問題複雜許多，另外還有生產供應鏈問題，但…還是試看吧
+										! 成功了、就可真正改變與解決教育現場/導覽擴音的需要。</p>
 								</blockquote>
 							</div>
 						</div>
