--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
 					<div class="container">
 						<div class="row">
 							<div class="col">
-								<ul class="breadcrumb">
-									<li><a href="index.html">首頁</a></li>
+								<ul class="breadcrumb breadcrumb-light">
+									<li class="pb-1"><a href="index.html">首頁</a></li>
 								</ul>
 							</div>
 						</div>
@@ -180,7 +180,7 @@
 							</div>
 							<div class="col-lg-7 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
 								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">YOUNGTONE TECHNOLOGY</h2>
-								<h4 class="font-weight-bold text-transform-none positive-ls-1 text-5-6 mb-2">公司起源</h3>
+								<h4 class="font-weight-bold text-transform-none positive-ls-1 text-6 mb-2">公司起源</h3>
 								<p class="line-height-7 text-4 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
 								<p class="line-height-7 text-4 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。
 								</p>
@@ -198,31 +198,21 @@
 					</div>
 				</section>
 				
-				<section class="section section-height-2 section-with-shape-divider border-0 lazyload my-5"
-					style="background-color: #ffd8b0;">
-					<div class="shape-divider shape-divider-reverse-xy" style="height: 109px;">
-						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							viewBox="0 0 2000 109" preserveAspectRatio="xMinYMin">
-							<path fill="#FFFFFF" d="M-29,0c16.91,7.69,40.41,17.74,69,28c24.89,8.93,114.79,39.95,247,52c89.7,8.18,157.69,3.87,215,0
-								c81.39-5.5,81.96-11.49,233-29c82.16-9.52,140.49-16.18,220-20c40.62-1.95,100.38-4.7,178-2c45.11,1.57,62.48,3.8,212,18
-								c122.78,11.66,184.77,17.53,214,19c80.47,4.06,142.71,3.13,219,2c68.63-1.02,116.48,0.48,182-6c32.74-3.24,59.69-7.11,78-10
-								c0,24.39,0,48.78,0,73.17c-691.67,0-1383.33,0-2075,0C-34.33,83.45-31.67,41.72-29,0z" />
-						</svg>
-					</div>
-					<div class="container position-relative z-index-3 spacer py-5 my-5">
+				<section class="section section-with-shape-divider border-0 lazyload my-5" style="background-color: #f7dec5;">
+					<div class="container position-relative z-index-3 spacer">
 						<div class="row align-items-center justify-content-center">
 							<div class="col-lg-7 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
-								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">OUR CHALLENGE</h2>
-								<h3 class="font-weight-bold text-transform-none text-7 line-height-2 mb-3">教學環境的問題</h3>
+								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">OUR CHALLENGE</h6>
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-6 mb-2">教學環境的問題</h4>
 								<p class="line-height-7 text-4 mb-3">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</p>
-								<div class="testimonial testimonial-secondary">
-									<blockquote>
+								<div class="testimonial testimonial-secondary mb-1">
+									<blockquote class="pt-4 pb-4">
 										<p class="mb-2">『感覺麥克風這東西40年沒變了!』</p>
 										<p class="mb-0">『一直以來都是笨重麥克風加很長的電線，或是聲音尖銳又不穩定的小蜜蜂』</p>
 									</blockquote>
 									<div class="testimonial-arrow-down"></div>
 									<div class="testimonial-author">
-										<p class="line-height-7 text-4 mb-3"><strong class="font-weight-semibold">傳統那重重的麥克風、那條長長的線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的麥克風都讓使用者付出不小心力，並多出職業病。但電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，改變了你我的生活 也增加了更多的可能。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
+										<p class="line-height-7 text-4 mb-2"><strong class="font-weight-semibold">傳統那重重的麥克風、那條長長的線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的麥克風都讓使用者付出不小心力，並多出職業病。但電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，改變了你我的生活 也增加了更多的可能。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
 									</div>
 								</div>
 								<ul class="list list-icons list-icons-lg">
@@ -245,24 +235,14 @@
 							</div>
 						</div>
 					</div>
-
-					<div class="shape-divider shape-divider-bottom" style="height: 109px;">
-						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							viewBox="0 0 2000 109" preserveAspectRatio="xMinYMin">
-							<path fill="#FFFFFF" d="M-29,0c16.91,7.69,40.41,17.74,69,28c24.89,8.93,114.79,39.95,247,52c89.7,8.18,157.69,3.87,215,0
-								c81.39-5.5,81.96-11.49,233-29c82.16-9.52,140.49-16.18,220-20c40.62-1.95,100.38-4.7,178-2c45.11,1.57,62.48,3.8,212,18
-								c122.78,11.66,184.77,17.53,214,19c80.47,4.06,142.71,3.13,219,2c68.63-1.02,116.48,0.48,182-6c32.74-3.24,59.69-7.11,78-10
-								c0,24.39,0,48.78,0,73.17c-691.67,0-1383.33,0-2075,0C-34.33,83.45-31.67,41.72-29,0z" />
-						</svg>
-					</div>
 				</section>
 
-				<section class="section custom-section-shape-background border-0 m-0 pt-0" style="background-color: #FFFFFF;">
+				<section class="section custom-section-shape-background border-0 m-0 p-0" style="background-color: #FFFFFF;">
 					<div class="container position-relative z-index-3 my-4">
 						<div class="row align-items-top justify-content-center">
 							<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
-								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">WHAT WE DO</h2>
-								<h3 class="font-weight-bold text-transform-none text-7 line-height-2 mb-3">科技帶來的改變</h3>
+								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">WHAT WE DO</h6>
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-6 mb-2">科技帶來的改變</h4>
 								<p class="line-height-7 text-4 mb-3">這些年，電子科技帶給來我們生活更加便利</p>
 								<p class="font-weight-semibold text-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="600" style="display:flex;align-items: center;justify-content: center;">
             			<span>這些產品設計最重要的基礎是在
@@ -336,12 +316,65 @@
 
 							</div>
 							<div class="col-lg-6 pr-lg-5 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200"">
-								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">PROMISE</h2>
-								<h3 class="font-weight-bold text-transform-none text-7 line-height-2 mb-3">承諾</h3>
-								<p class="line-height-7 text-4 mb-3">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
-								<p class="line-height-7 text-4 mb-3">讓麥克風 / 擴音走向無線、IC 化，方能提供您穩定、輕薄、人體工學設計的產品，讓新科技持續導入到麥克風與擴音系統，讓教學 導覽使用者方便無負擔。</p>
-								<p class="line-height-7 text-4 mb-3">不斷嘗試創新 採用高科技技術 保證最好的品質 只要平實的價格 這就是養聲堂 </p>
-								<p class="line-height-7 text-4 mb-3">~ 這是我們的承諾</p>
+								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">PROMISE</h6>
+								<h4 class="font-weight-bold text-transform-none text-6 line-height-2 mb-2">承諾</h4>
+								<p class="line-height-7 text-4 mb-2">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
+								<p class="line-height-7 text-4 mb-2">讓麥克風 / 擴音走向無線、IC 化，方能提供您穩定、輕薄、人體工學設計的產品，讓新科技持續導入到麥克風與擴音系統，讓教學 導覽使用者方便無負擔。</p>
+								<p class="line-height-7 text-4 mb-2">不斷嘗試創新 採用高科技技術 保證最好的品質 只要平實的價格 這就是養聲堂。</p>
+								<p class="line-height-7 text-4 mb-2">~ 這是我們的承諾</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="section section-with-shape-divider border-0 lazyload mb-0" style="background-color: #f7dec5;">
+					<div class="container position-relative z-index-3 spacer">
+						<div class="row align-items-center justify-content-center">
+							<div class="order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
+								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">OUR CHALLENGE</h6>
+								<h4 class="font-weight-bold text-transform-none line-height-2 text-6 mb-2">產品優勢</h4>
+								<div class="row">
+									<div class="col-lg-6 order-2 appear-animation" data-appear-animation="fadeInLeftShorter"
+										data-appear-animation-delay="400">
+										<ul class="list list-icons list-icons-lg">
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">傳統麥克風,小蜜蜂常沒使用多久就有雜音，只是簡單便宜 ~ 不好用。<br>
+													養聲堂的產品特色是做到100% 無線的一體化設計(避免插座連接)，無線信號傳輸 & 產品完全沒有 "線"。</span>
+											</li>
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">產品設計皆從人體工學出發，以使用者操作 / 便於攜帶 / 需長時間講演為考量。</span>
+											</li>
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">能有效的避免喇叭所造成的回授，且麥克風收音穩定靈敏，因收音穩定可避免因喉嚨聲帶緊繃造成傷害。</span>
+											</li>
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">使用半導體晶片，如手機般功能多 品質穩定，可以完全避免環境干擾和串音。</span>
+											</li>
+										</ul>
+									</div>
+									<div class="col-lg-6 order-1 order-lg-2 pl-lg-5 mb-4 mb-lg-0 appear-animation"
+										data-appear-animation="fadeInRightShorter" data-appear-animation-delay="600">
+										<ul class="list list-icons list-icons-lg">
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">產品重量全世界最輕，手持麥克風70g、頸掛麥克風 40g 、音頻主機38g 、音箱 300g (以上皆含電池)。</span>
+											</li>
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">售後服務有保障 ：產品所有技術與零件皆由公司自行開發與採購 生產，品質有保障，也可提供售後完整的問題解決或零件更換。</span>
+											</li>
+											<li>
+												<i class="fas fa-angle-right"></i>
+												<span class="text-4">無線平台可以讓使用者在麥克風(YS-100，YS-150) / 自有手機 ←→
+														音頻主機(YS-200) / 擴音音箱(YS-250)間自由搭配，也可以選用多種麥克風與一個音頻主機/擴音器搭配，不需重複購買相同功能的設備。養聲堂未來產品也可與前期產品搭配使用。</span>
+											</li>
+										</ul>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
